--- a/src/page.css
+++ b/src/page.css
@@ -3,3 +3,4 @@
 @import 'stylesheets/fonts.scss';
 @import 'stylesheets/basics.scss';
 @import 'stylesheets/page.scss';
+@import 'stylesheets/content.css';
